# ai-product-sprint

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
playground/resume-checkpoint/: design.md  verify_sdk_checkpoint.py
src/: __init__.py  cli.py
src/agents/: evaluator.py  generator.py  planner.py  types.py
src/core/: config.py  orchestrator.py
