[project]
name = "ai-product-sprint"
version = "0.1.0"
description = "AI Product Sprint - Build products with multi-agent AI system"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "aiohttp>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
aisprint = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
ignore = ["F541"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
